# ckanext-switzerland-ng

./: .coveragerc  .travis.yml  MANIFEST.in  README.md  dev-requirements.txt  publiccode.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ini  text
.github/workflows/: test.yml
ckanext/switzerland/: config_declaration.yaml  dcat-ap-switzerland_scheming.json  logic.py  middleware.py  multilingual_group_scheming.json  multilingual_organization_scheming.json  plugins.py  presets.json  views.py
ckanext/switzerland/assets/: webassets.yml
ckanext/switzerland/blueprints/: organization.py  perma.py  user.py
ckanext/switzerland/controllers/: group.py  organization.py  package.py  perma.py  subscribe.py  user.py
ckanext/switzerland/fanstatic/: ogdch_datepicker.js  ogdch_file_upload.css  ogdch_file_upload.js  ogdch_form_helper.css  ogdch_form_helper.js  ogdch_form_helper_contact_points.js  ogdch_form_helper_publishers.js  ogdch_form_helper_relations.js  ogdch_form_helper_see_alsos.js  ogdch_form_helper_temporals.js  ogdch_organization_filter.css  ogdch_organization_filter.js  ogdch_preview_helper.js
ckanext/switzerland/helpers/: backend_helpers.py  dataset_form_helpers.py  date_helpers.py  decorators.py  format_mapping.yaml  format_utils.py  frontend.py  frontend_helpers.py  localize_utils.py  logic_helpers.py  mail_helper.py  mapping.yaml  media_type_mapping.yaml  plugin_utils.py  request_utils.py  terms_of_use_utils.py  validators.py
ckanext/switzerland/i18n/: ckanext-switzerland.pot
ckanext/switzerland/public/: resource.config
ckanext/switzerland/templates/: base.html  footer.html  header.html  page.html  robots.txt
ckanext/switzerland/tests/: __init__.py  conftest.py  test_blueprints.py  test_controller.py  test_date_helpers.py  test_date_validators.py  test_decorators.py  test_format_utils.py  test_helpers_backend.py  test_helpers_frontend.py  test_helpers_localize.py  test_helpers_terms_of_use.py  test_logic.py  (+6 more)
compare/: existing  new
solr/: italian_stop.txt  schema.xml  solrconfig.xml
(+173 files in other folders)
